--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-$mainColor: #098cffc7;
+$mainColor: #0787f894;
 
 
 * {
@@ -38,25 +38,25 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     @include br(lg){
-            width: 900px;
+            max-width: 900px;
             padding: 0 15px;
             box-sizing: border-box;
             margin: 0 auto;
         }
     @include br(md){
-            width: 800px;
+            max-width: 800px;
             padding: 0 15px;
             box-sizing: border-box;
             margin: 0 auto;
         }
     @include br(sm){
-            width: 768px;
+            max-width: 768px;
             padding: 0 15px;
             box-sizing: border-box;
             margin: 0 auto;
         }
     @include br(xs){
-            width: 480px;
+            max-width: 480px;
             padding: 0 0px;
             box-sizing: border-box;
             margin: 0 auto;
@@ -72,11 +72,17 @@ body {
     border-bottom: 2px rgba(0, 0, 0, 0.596) solid;
     padding-top: 20px;
     padding-bottom: 20px;
-    @include br(xs) {
-        width: 480px;
-      }
-      @include br(sm) {
-        width: 768px;
+    @include br(lg){
+        flex-direction: column;
+        align-items: center;
+    }
+    @include br(md){
+        flex-direction: column;
+        align-items: center;
+    }
+    @include br(xs){
+        flex-direction: column;
+        align-items: center;
         }
     &_logo {
         font-size: 22px;
@@ -84,22 +90,19 @@ body {
         padding-bottom: 10px;
         border-top: 2px $mainColor solid;
         border-bottom: 2px $mainColor solid;
-        @include br(sm) {
-            font-size: 32px;
-            }
     }
     &_nav {
         display: flex;
         justify-content: space-between;
         width: 30%;
-        @include br(sm){
-            display: flex;
-            flex-direction: column;
+        @include br(lg){
+            padding-top: 20px;
+            width: 70%;
         }
         @include br(md){
-        display: flex;
-        flex-direction: column;
-    }
+            padding-top: 20px;
+            width: 70%;
+        }
         &-link {
             font-size: 19px;
             font-weight: 100;
@@ -110,12 +113,6 @@ body {
             border-top: 2px transparent solid;
             border-bottom: 2px transparent solid;
             transition: 0.3s ease;
-            @include br(sm){
-                font-size: 30px;
-            }
-            @include br(xs){
-                font-size: 30px;
-            }
             &:hover {
                 color: black;
                 border-top: 2px $mainColor solid;
@@ -123,26 +120,44 @@ body {
                 transition: 0.3s ease;
             }
         }
-    }
-    &_social {
-        display: flex;
-        flex-direction: column;
-        width: 20%;
-        &-link {
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-            transition: 0.3s ease;
-             img {
-                 padding-right: 10px;
-                 display: block;
-                 width: 40px;
-             }
-             &:hover {
-                 transform: scale(1.1);
-                 transition: 0.3s ease;
-             }
+        #contacts {
+            position: relative;
+            &:hover {
+                .contacts_menu {
+                    opacity: 1;
+                    transition: 0.3s ease;
+                }
+
+            }
+            .contacts_menu {
+                opacity: 0;
+                transition: 0.3s ease;
+                position: absolute;
+                top: 100%;
+                left: -20%;
+                padding-right: 5px;
+                padding-left: 5px;
+                padding-bottom: 5px;
+                background-color: white;
+                border-bottom: 2px $mainColor solid;
+                border-left: 2px $mainColor solid;
+                border-right: 2px $mainColor solid;
+                font-size: 20px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                p {
+                    padding-top: 20px;
+                    padding-bottom: 3px;
+                    text-transform: uppercase;
+                    border-bottom: 2px transparent solid;
+                    &:hover {
+                        border-bottom: 2px $mainColor solid;
+                    }
+                }
+            }
         }
+        
     }
 }
 
@@ -151,12 +166,6 @@ body {
     height: 1000px;
     background: url(/img/main_bg.jpg) no-repeat;
     background-color: $mainColor;
-        @include br(xs) {
-        width: 480px;
-        }
-        @include br(sm) {
-        width: 768px;
-        }
     &_title {
         font-size: 62px;
         text-align: center;
@@ -234,12 +243,6 @@ body {
     padding-top: 120px;
     background: url(/img/bg-vacansies.jpg) no-repeat;
     background-size: cover;
-        @include br(xs) {
-        width: 480px;
-        }
-        @include br(sm) {
-        width: 768px;
-        }
     &_wrapper {
         max-width: 1800px;
         margin: 0 auto;
@@ -256,18 +259,11 @@ body {
         display: flex;
         justify-content: space-between;
         padding-top: 60px;
-        overflow: hidden;
-    @include br(md){
-            display: none;
-        }
-    @include br(sm){
-            display: none;
-        }
-    @include br(xs){
-            display: none;
-        } 
+        overflow: hidden; 
         &_item {
             display: block;
+            width: 32%;
+            height: 600px;
             background-color: white;
             margin: 25px 25px 25px 25px;
             text-align: center;
@@ -306,77 +302,6 @@ body {
             }
         }
     }
-   .mobile_vacansies {
-       display: none;
-        &_item {
-            width: 390px;
-            display: block;
-            background-color: white;
-            margin: 25px 25px 25px 25px;
-            text-align: center;
-            padding-left: 20px;
-            padding-right: 20px;
-            border-radius: 15px;
-            border: 2px transparent solid;
-            padding-top: 20px;
-            padding-bottom: 40px;
-            transition: 0.3s ease;
-                    @include br(sm) {
-                    .mobile_vacansies-title {
-                        font-size: 50px;
-                    }
-                    .mobile_vacansies-subtitle {
-                        font-size: 35px;
-                    }
-                    .mobile_vacansies-description {
-                        font-size: 20px;
-                    }
-                }
-            &-title {
-                font-size: 30px;
-                text-transform: uppercase;
-            }
-            &-subtitle {
-                font-size: 22px;
-                padding-top: 15px;
-                padding-bottom: 15px;
-            }
-            &-description {
-                font-size: 19px;
-            }
-            img {
-                padding-top: 10px;
-                padding-bottom: 20px;
-                display: block;
-                margin: 0 auto;
-                height: 120px;
-                width: 240px;
-            }
-            &:hover {
-                border: 2px $mainColor solid;
-                transform: scale(1.055);
-                transition: 0.3s ease;
-            }
-        }
-        @include br(md) {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        @include br(sm) {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        @include br(xs) {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-   }
 }
 
 .map {
@@ -389,49 +314,31 @@ body {
     width: 100%;
     padding-top: 60px;
     padding-bottom: 60px;
-    @include br(xs) {
-        width: 480px;
-        }
-        @include br(sm) {
-        width: 768px;
-        }
     &_wrapper {
         width: 100%;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
         align-items: center;
-        flex-wrap: wrap;
-        @include br(md){
-            justify-content: center;
-    }
         &-left {
             display: flex;
             flex-direction: column;
             width: 50%;
-            @include br(sm) {
-                align-items: center;
-                }
             &--title {
-                color: black;
+                color: white;
                 -webkit-text-stroke: 2px rgba(0,0,0,0.5);
                 font-size: 42px;
                 padding-bottom: 20px;
-                @include br(sm) {
-                    font-size: 70px;
-                    }
             }
             &--subtitle {
-                font-size: 20px;
-                color: black;
+                font-size: 25px;
+                color: white;
                 -webkit-text-stroke: 1px rgb(0, 0, 0);
-                @include br(sm) {
-                    display: none;
-                    }
             }
         }
         &-right {
             display: flex;
             flex-direction: column;
+            
             &--inputs {
                 display: flex;
                 flex-direction: column;
@@ -446,6 +353,9 @@ body {
                     outline: none;
                     border-radius: 3px;
                     border: 1px rgb(8, 8, 8) solid;
+                    @include br(sm){
+                        width: 300px;
+                    }
                     &:focus {
                         border: #098cff 1px solid;
                     }
@@ -460,6 +370,9 @@ body {
                 outline: none;
                 border-radius: 3px;
                 border: 1px rgb(8, 8, 8) solid;
+                @include br(sm){
+                    width: 300px;
+                }
                 &:focus {
                     border: #098cff 1px solid;
                 }
@@ -476,12 +389,6 @@ body {
     position: relative;
     text-align: center;
     text-shadow: 0px 0px 1px rgba(0,0,0,0.5);
-    @include br(xs) {
-        width: 480px;
-        }
-        @include br(sm) {
-        width: 768px;
-        }
     &_title {
         text-align: center;
         font-size: 42px;
@@ -506,12 +413,6 @@ body {
 }
 
 .googleMaps {
-    @include br(xs) {
-        width: 480px;
-        }
-        @include br(sm) {
-        width: 768px;
-        }
     #map {
         height: 400px;
       }
@@ -522,12 +423,6 @@ body {
     background-color: gray;
     padding-top: 20px;
     padding-bottom: 20px;
-    @include br(xs) {
-        width: 480px;
-        }
-        @include br(sm) {
-        width: 768px;
-        }
     &_wrapper {
         display: flex;
         justify-content: space-evenly;
