--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,6 +37,12 @@ body {
 .container {
     max-width: 1200px;
     margin: 0 auto;
+    @include br(xl){
+        max-width: 1300px;
+        padding: 0 15px;
+        box-sizing: border-box;
+        margin: 0 auto;
+        }
     @include br(lg){
             max-width: 900px;
             padding: 0 15px;
@@ -95,13 +101,15 @@ body {
         display: flex;
         justify-content: space-between;
         width: 30%;
-        @include br(lg){
-            padding-top: 20px;
-            width: 70%;
+        @include br(xl){
+            width: 50%;
         }
         @include br(md){
             padding-top: 20px;
             width: 70%;
+        }
+        @include br(sm){
+           width: 90%;
         }
         &-link {
             font-size: 19px;
@@ -113,6 +121,10 @@ body {
             border-top: 2px transparent solid;
             border-bottom: 2px transparent solid;
             transition: 0.3s ease;
+            @include br(sm){
+                margin-left: 10px;
+                margin-right: 10px;
+            }
             &:hover {
                 color: black;
                 border-top: 2px $mainColor solid;
@@ -130,11 +142,12 @@ body {
 
             }
             .contacts_menu {
+                width: 300px;
                 opacity: 0;
                 transition: 0.3s ease;
                 position: absolute;
                 top: 100%;
-                left: -20%;
+                left: -125%;
                 padding-right: 5px;
                 padding-left: 5px;
                 padding-bottom: 5px;
@@ -146,11 +159,15 @@ body {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                p {
+                p { 
                     padding-top: 20px;
                     padding-bottom: 3px;
                     text-transform: uppercase;
                     border-bottom: 2px transparent solid;
+                    span {
+                        color: purple;
+                        font-weight: 400;
+                    }
                     &:hover {
                         border-bottom: 2px $mainColor solid;
                     }
@@ -338,7 +355,7 @@ body {
         &-right {
             display: flex;
             flex-direction: column;
-            
+            align-items: center;
             &--inputs {
                 display: flex;
                 flex-direction: column;
@@ -376,6 +393,12 @@ body {
                 &:focus {
                     border: #098cff 1px solid;
                 }
+            }
+            &--button {
+                margin-top: 20px;
+                display: block;
+                width: 100px;
+                height: 50px;
             }
         }
     }
