--- a/scss/main.scss
+++ b/scss/main.scss
@@ -181,7 +181,7 @@ body {
 .main {
     width: 100%;
     height: 1000px;
-    background: url(../img/main_bg.jpg) no-repeat;
+    background: url(./img/main_bg.jpg) no-repeat;
     background-color: $mainColor;
     &_title {
         font-size: 62px;
@@ -258,7 +258,7 @@ body {
     width: 100%;
     padding-bottom: 80px;
     padding-top: 120px;
-    background: url(../img/bg-vacansies.jpg) no-repeat;
+    background: url(./img/bg-vacansies.jpg) no-repeat;
     background-size: cover;
     &_wrapper {
         max-width: 1800px;
@@ -326,7 +326,7 @@ body {
 }
 
 .message {
-    background: url(../img/vacansies_bg.jpg) no-repeat;
+    background: url(./img/vacansies_bg.jpg) no-repeat;
     background-size: cover;
     width: 100%;
     padding-top: 60px;
