--- a/scss/main.scss
+++ b/scss/main.scss
@@ -87,6 +87,7 @@ body {
         align-items: center;
     }
     @include br(xs){
+        width: 480px;
         flex-direction: column;
         align-items: center;
         }
@@ -111,6 +112,9 @@ body {
         @include br(sm){
            width: 90%;
         }
+        @include br(xs){
+            width: 480px;
+            }
         &-link {
             font-size: 19px;
             font-weight: 100;
@@ -183,6 +187,9 @@ body {
     height: 1000px;
     background: url(./img/main_bg.jpg) no-repeat;
     background-color: $mainColor;
+    @include br(xs){
+        width: 480px;
+        }
     &_title {
         font-size: 62px;
         text-align: center;
@@ -260,6 +267,9 @@ body {
     padding-top: 120px;
     background: url(./img/bg-vacansies.jpg) no-repeat;
     background-size: cover;
+    @include br(xs){
+        width: 480px;
+        }
     &_wrapper {
         max-width: 1800px;
         margin: 0 auto;
@@ -321,7 +331,10 @@ body {
     }
 }
 
-.map {
+#map {
+    @include br(xs){
+        width: 480px;
+        }
 
 }
 
@@ -331,11 +344,17 @@ body {
     width: 100%;
     padding-top: 60px;
     padding-bottom: 60px;
+    @include br(xs){
+        width: 480px;
+        }
     &_wrapper {
         width: 100%;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
+        @include br(xs){
+            flex-direction: column;
+            }
         &-left {
             display: flex;
             flex-direction: column;
@@ -412,6 +431,9 @@ body {
     position: relative;
     text-align: center;
     text-shadow: 0px 0px 1px rgba(0,0,0,0.5);
+    @include br(xs){
+        width: 480px;
+        }
     &_title {
         text-align: center;
         font-size: 42px;
@@ -446,6 +468,9 @@ body {
     background-color: gray;
     padding-top: 20px;
     padding-bottom: 20px;
+    @include br(xs){
+        width: 480px;
+        }
     &_wrapper {
         display: flex;
         justify-content: space-evenly;
